--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 *.joblib filter=lfs diff=lfs merge=lfs -text
-*.zip filter=lfs diff=lfs merge=lfs -text
+*.tar.bz2 filter=lfs diff=lfs merge=lfs -text
